# kitt4sme.dazzler

./: Dockerfile  LICENSE  README.md  pyproject.toml
dazzler/: __init__.py  config.py  main.py  ngsy.py
dazzler/dash/: components.py  entitiesframe.py  entitymon.py  fiware.py  timeseries.py  wiring.py
dazzler/dash/board/: dbc_demo.py  fams.py  insight.py  inspection_demo.py  roughnator.py  smart_collaboration.py  smart_collaboration_light.py  viqe.py
dazzler/dash/board/fatigue/: main.py
dazzler/dash/board/insight/: __init__.py  datasource.py  fams_cells.py  model.py  view.py
dazzler/dash/board/smart-collaboration/: main.py
dazzler/dash/board/smartcollaboration/: entities.py  view.py
nix/: flake.nix
tests/sim/: __main__.py  dazzler-config.yaml  docker-compose.yml  runner.py
tests/unit/: test_base_path.py  test_config.py  test_version.py
tests/unit/config/: boards.yaml  ql-url.yaml
tests/unit/dash/: test_base_path.py  test_dashboards_config.py
tests/unit/dash/board/: test_insight_matrix_conversion.py  test_insight_table_conversion.py  test_viqe_report.py
tests/unit/dash/board/insight/: test_table_conversion.py
tests/util/: fiware.py
